[package]
authors = ["Nicolas Patry <patry.nicolas@protonmail.com>"]
name = "bindgen_cuda"
version = "0.3.3"
edition = "2024"
rust-version = "1.97"
description = """
Bindgen like interface to build cuda kernels to interact with within Rust.
"""
readme = "./README.md"
license = "MIT"
homepage = "https://github.com/Narsil/bindgen_cuda"
repository = "https://github.com/Narsil/bindgen_cuda"
documentation = "https://docs.rs/bindgen_cuda/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
num_cpus = "1.16.0"
rayon = "1.8.0"

[dependencies.cudarc]
version = "0.19"
features = ["std", "cuda-version-from-build-system", "dynamic-loading", "driver", "fallback-latest"]
default-features = false
optional = true

[features]
default = []
driver-detect = ["dep:cudarc"]
ci-check = []